[gd_scene load_steps=32 format=3 uid="uid://ctj7n64nscs75"]

[ext_resource type="Script" path="res://Player.gd" id="1_ni07c"]
[ext_resource type="Texture2D" uid="uid://ckuj6t1r2kivs" path="res://prototyping_assets/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/12-Fall Sword/Fall Sword 01.png" id="2_n8ny0"]
[ext_resource type="Texture2D" uid="uid://s8o8a1kl0kpj" path="res://prototyping_assets/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/09-Idle Sword/Idle Sword 01.png" id="2_rinyn"]
[ext_resource type="Texture2D" uid="uid://dqlo08oaywh8f" path="res://prototyping_assets/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/09-Idle Sword/Idle Sword 02.png" id="3_gm3o0"]
[ext_resource type="Texture2D" uid="uid://c41t8ph0v82ih" path="res://prototyping_assets/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/15-Attack 1/Attack 1 01.png" id="3_uqvaj"]
[ext_resource type="Texture2D" uid="uid://c7xc5y5rv1dhg" path="res://prototyping_assets/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/09-Idle Sword/Idle Sword 03.png" id="4_7juie"]
[ext_resource type="Texture2D" uid="uid://4xr2d2oqk8ds" path="res://prototyping_assets/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/15-Attack 1/Attack 1 02.png" id="4_s7d2h"]
[ext_resource type="Texture2D" uid="uid://7t0lillbk0ox" path="res://prototyping_assets/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/09-Idle Sword/Idle Sword 04.png" id="5_rcmip"]
[ext_resource type="Texture2D" uid="uid://bb18suhxrxdt6" path="res://prototyping_assets/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/15-Attack 1/Attack 1 03.png" id="5_wwhng"]
[ext_resource type="Texture2D" uid="uid://cq21wpa148pq5" path="res://prototyping_assets/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/09-Idle Sword/Idle Sword 05.png" id="6_e4sag"]
[ext_resource type="Texture2D" uid="uid://cgq23qr3xalcl" path="res://prototyping_assets/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/11-Jump Sword/Jump Sword 01.png" id="8_aiql2"]
[ext_resource type="Texture2D" uid="uid://bscqhf5ogig2h" path="res://prototyping_assets/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/11-Jump Sword/Jump Sword 02.png" id="9_mcuf0"]
[ext_resource type="Texture2D" uid="uid://dwmhhhd2rcvpi" path="res://prototyping_assets/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/11-Jump Sword/Jump Sword 03.png" id="10_70ju3"]
[ext_resource type="Texture2D" uid="uid://oup62yr1wcx" path="res://prototyping_assets/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 02.png" id="12_epmly"]
[ext_resource type="Texture2D" uid="uid://51bxy2gwiiuj" path="res://prototyping_assets/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 03.png" id="13_3wnn3"]
[ext_resource type="Texture2D" uid="uid://dphotqraufwlo" path="res://prototyping_assets/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 04.png" id="14_gvat8"]
[ext_resource type="Texture2D" uid="uid://bffc5jtynp4p8" path="res://prototyping_assets/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 05.png" id="15_r12px"]
[ext_resource type="Texture2D" uid="uid://vhah4i3holyl" path="res://prototyping_assets/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 06.png" id="16_acp4v"]
[ext_resource type="AudioStream" uid="uid://c4qj1y67cvjod" path="res://prototyping_assets/cartoon-jump-6462.mp3" id="19_hxnhl"]
[ext_resource type="AudioStream" uid="uid://bbstel0r2iylr" path="res://prototyping_assets/running-in-grass-6237.mp3" id="20_5ra2k"]
[ext_resource type="AudioStream" uid="uid://dlhn2g5fq36lc" path="res://prototyping_assets/sword-sound-effect-2-234986.mp3" id="21_e3p0w"]
[ext_resource type="AudioStream" uid="uid://uxev1mewldu8" path="res://prototyping_assets/videogame-death-sound-43894.mp3" id="22_3akai"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b1rbs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_onqo1"]

[sub_resource type="Animation" id="Animation_bspao"]
resource_name = "Attack"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("3_uqvaj"), ExtResource("4_s7d2h"), ExtResource("5_wwhng")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:attacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_xpsvc"]
resource_name = "Fall"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_n8ny0")]
}

[sub_resource type="Animation" id="Animation_7i6ma"]
resource_name = "Jump"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("8_aiql2"), ExtResource("9_mcuf0"), ExtResource("10_70ju3")]
}

[sub_resource type="Animation" id="Animation_4gvug"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_rinyn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:attacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_q2sce"]
resource_name = "Run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("12_epmly"), ExtResource("13_3wnn3"), ExtResource("14_gvat8"), ExtResource("15_r12px"), ExtResource("16_acp4v")]
}

[sub_resource type="Animation" id="Animation_negpa"]
resource_name = "idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_rinyn"), ExtResource("3_gm3o0"), ExtResource("4_7juie"), ExtResource("5_rcmip"), ExtResource("6_e4sag")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6le8q"]
_data = {
"Attack": SubResource("Animation_bspao"),
"Fall": SubResource("Animation_xpsvc"),
"Jump": SubResource("Animation_7i6ma"),
"RESET": SubResource("Animation_4gvug"),
"Run": SubResource("Animation_q2sce"),
"idle": SubResource("Animation_negpa")
}

[node name="Player" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1_ni07c")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_rinyn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_b1rbs")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(20, 4)
shape = SubResource("CircleShape2D_onqo1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6le8q")
}

[node name="sfx_jump_start" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("19_hxnhl")

[node name="sfx_run_start" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("20_5ra2k")

[node name="sfx_attack_start" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("21_e3p0w")

[node name="sfx_death_start" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("22_3akai")

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_right = 1150
limit_bottom = 825
